--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "express": ">=3.x",
-    "jade": ">=0.33.x",
+    "jade": ">=0.35",
     "byline": ">=4.x",
     "node-uuid": ">=1.x"
   },
